--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,19 @@
 Package: EPhysData
 Type: Package
-Title: What the Package Does (Title Case)
-Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Title: EPhysData - Package for Handling Electrophysiological Data
+Version: 0.9.0
+Author: person("Moritz", "Lindner", email = "moritz@lindnerlab.de", role = c("aut", "cre"))
+Maintainer: Moritz Lindner <moritz@lindnerlab.de>
+Description: This package provides classes and methods for handling electrophysiological data.
+License: GPL (>= 3)
+Remotes: moritzlindner/EPhysData
+Depends:
+    units
+Imports:
+    remotes,
+    tidyr,
+    methods
 Encoding: UTF-8
 LazyData: true
+RoxygenNote: 7.2.0
+Roxygen: list(markdown = TRUE)
