- documentation updated - Getdata and Subset handling of Rejected slot

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,9 @@ exportMethods(dim)
 exportMethods(lapply)
 exportMethods(length)
 import(units)
+importFrom(methods,new)
+importFrom(methods,validObject)
+importFrom(stats,runif)
 importFrom(tidyr,pivot_longer)
 importFrom(tidyr,starts_with)
 importFrom(units,as_units)
