--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ exportMethods("AverageFunction<-")
 exportMethods("FilterFunction<-")
 exportMethods("Metadata<-")
 exportMethods("Rejected<-")
+exportMethods("[")
 exportMethods("[[")
 exportMethods(AddData)
 exportMethods(AddMetadata)
@@ -23,9 +24,17 @@ exportMethods(Subset)
 exportMethods(TimeTrace)
 exportMethods(as.data.frame)
 exportMethods(dim)
+exportMethods(ggEPhysData)
 exportMethods(lapply)
 exportMethods(length)
 import(units)
+importFrom(ggplot2,aes)
+importFrom(ggplot2,geom_line)
+importFrom(ggplot2,ggplot)
+importFrom(ggplot2,labs)
+importFrom(ggplot2,scale_alpha_manual)
+importFrom(ggplot2,scale_color_manual)
+importFrom(ggpubr,theme_pubr)
 importFrom(methods,new)
 importFrom(methods,validObject)
 importFrom(stats,runif)
