--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,7 +13,9 @@ Depends:
 Imports:
     remotes,
     tidyr,
-    methods
+    methods,
+    ggplot2,
+    ggpubr
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.2.3
