--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: EPhysData
 Type: Package
 Title: EPhysData - Package for Handling Electrophysiological Data
-Version: 0.9.3
+Version: 0.9.4
 Author: person("Moritz", "Lindner", email = "moritz@lindnerlab.de", role = c("aut", "cre"))
 Maintainer: Moritz Lindner <moritz@lindnerlab.de>
 Description: This package provides classes and methods for handling electrophysiological data.
@@ -15,7 +15,9 @@ Imports:
     tidyr,
     methods,
     ggplot2,
-    ggpubr
+    ggpubr,
+    hdf5r,
+    stringr
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.2.3
