--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,7 @@ Maintainer: Moritz Lindner <moritz@lindnerlab.de>
 Description: This package provides classes and methods for handling electrophysiological data.
 License: GPL (>= 3)
 Remotes:
-    github::moritzlindner/EPhysMethods (>= 0.3.0)
+    github::moritzlindner/EPhysMethods
 Depends:
     units
 Imports:
@@ -17,7 +17,8 @@ Imports:
     ggplot2,
     ggpubr,
     hdf5r,
-    stringr
+    stringr,
+    EPhysMethods (>= 0.3.0)
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.2.3
