--- a/NAMESPACE
+++ b/NAMESPACE
@@ -44,6 +44,7 @@ importFrom(methods,new)
 importFrom(methods,validObject)
 importFrom(stats,runif)
 importFrom(stringr,str_detect)
+importFrom(stringr,str_extract)
 importFrom(tidyr,pivot_longer)
 importFrom(tidyr,starts_with)
 importFrom(units,as_units)
