--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export("FilterFunction<-")
 export("Rejected<-")
 export(AddData)
 export(AverageFunction)
+export(Downsample)
 export(FilterFunction)
 export(GetData)
 export(Load)
@@ -14,6 +15,7 @@ export(Save)
 export(StimulusTrace)
 export(Subset)
 export(TimeTrace)
+export(as.data.frame)
 export(ggEPhysData)
 export(makeExampleEPhysData)
 export(makeExampleEPhysSet)
@@ -25,7 +27,6 @@ exportMethods("Metadata<-")
 exportMethods("[")
 exportMethods("[[")
 exportMethods(AddMetadata)
-exportMethods(as.data.frame)
 exportMethods(dim)
 exportMethods(lapply)
 exportMethods(length)
