BestSIPrefix methods added

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export("FilterFunction<-")
 export("Rejected<-")
 export(AddData)
 export(AverageFunction)
+export(BestSIPrefix)
 export(Downsample)
 export(FilterFunction)
 export(GetData)
@@ -12,6 +13,7 @@ export(Load)
 export(Metadata)
 export(Rejected)
 export(Save)
+export(SetSIPrefix)
 export(StimulusTrace)
 export(Subset)
 export(TimeTrace)
@@ -42,15 +44,21 @@ importFrom(hdf5r,H5File)
 importFrom(hdf5r,`h5attr<-`)
 importFrom(hdf5r,h5attr)
 importFrom(methods,new)
+importFrom(methods,setGeneric)
+importFrom(methods,setMethod)
 importFrom(methods,validObject)
+importFrom(stats,median)
 importFrom(stats,runif)
 importFrom(stringr,str_detect)
 importFrom(stringr,str_extract)
+importFrom(stringr,str_locate)
+importFrom(stringr,str_sub)
 importFrom(tidyr,pivot_longer)
 importFrom(tidyr,starts_with)
 importFrom(units,as_units)
 importFrom(units,deparse_unit)
 importFrom(units,drop_units)
+importFrom(units,set_units)
 importFrom(units,unitless)
 importFrom(utils,compareVersion)
 importFrom(utils,object.size)
