repeated measurements are now consitently termed "trials"

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,7 @@ exportMethods(dim)
 exportMethods(lapply)
 exportMethods(length)
 import(units)
+importFrom(cli,cli_abort)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,geom_line)
 importFrom(ggplot2,ggplot)
