--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Type: Package
 Package: EPhysData
 Title: EPhysData - Package for Handling Electrophysiological Data
-Version: 0.9.5
+Version: 0.9.6
 Author: person("Moritz", "Lindner", email = "moritz@lindnerlab.de", role =
     c("aut", "cre"))
 Maintainer: Moritz Lindner <moritz@lindnerlab.de>
@@ -17,7 +17,8 @@ Imports:
     methods,
     remotes,
     stringr,
-    tidyr
+    tidyr,
+    cli
 Suggests: 
     EPhysMethods
 Remotes:
